base/guestbook-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels:
    shared-gateway-access: "true"
