base/guestbook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbooks
  ports:
    - name: http
      port: 80
      targetPort: http
