base/guestbook-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guestbook-route
spec:
  parentRefs:
  - name: guestbook
    namespace: nginx-gateway
  hostnames:
  - "guestbook.juho.relex.software"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: guestbook
      kind: Service
      port: 80
